--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "author": "",
   "license": "ISC",
   "description": "",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
+    "start": "node app.js",
     "dev": "nodemon"
   },
   "dependencies": {
